@@ -25,7 +25,7 @@ Code
 
 The finished code for this is available in
 `docs/json-example-code/jsonrpc.py
-<https://github.com/Pylons/webob/blob/master/docs/jsonrpc-example-code/jsonrpc.py>`_
+<https://github.com/Pylons/webob/blob/main/docs/jsonrpc-example-code/jsonrpc.py>`_
 -- you can run that file as a script to try it out, or import it.
 
 Concepts
@@ -537,9 +537,9 @@ Using Them Together
 Good programmers start with tests.  But at least we'll end with a
 test.  We'll use :py:mod:`doctest` for our
 tests.  The test is in `docs/json-example-code/test_jsonrpc.txt
-<https://github.com/Pylons/webob/blob/master/docs/jsonrpc-example-code/test_jsonrpc.txt>`_
+<https://github.com/Pylons/webob/blob/main/docs/jsonrpc-example-code/test_jsonrpc.txt>`_
 and you can run it with `docs/json-example-code/test_jsonrpc.py
-<https://github.com/Pylons/webob/blob/master/docs/jsonrpc-example-code/test_jsonrpc.py>`_,
+<https://github.com/Pylons/webob/blob/main/docs/jsonrpc-example-code/test_jsonrpc.py>`_,
 which looks like:
 
 .. code-block:: python
