@@ -26,7 +26,7 @@ Code
 
 The finished code for this is available in
 `docs/wiki-example-code/example.py
-<https://github.com/Pylons/webob/blob/master/docs/wiki-example-code/example.py>`_
+<https://github.com/Pylons/webob/blob/main/docs/wiki-example-code/example.py>`_
 -- you can run that file as a script to try it out.
 
 Creating an Application
